--- a/index.html
+++ b/index.html
@@ -8,33 +8,33 @@
 
 <body>
     <header>
-        <div class="head_line">
-            <div class="logo">
-                <span class="logo_first_word">WEB</span>
-                <span class="logo_second_word">STUDIO</span>
+        <div class="HeadLine">
+            <div class="Logo">
+                <span class="logoFirstWord">WEB</span>
+                <span class="logoSecondWord">STUDIO</span>
             </div>
 
-            <nav class="main_menu">
-                <ul class="main_menu_list">
-                    <li class="main_menu_items">
+            <nav class="MainMenu">
+                <ul class="MainMenuList">
+                    <li class="MainMenuItems">
                         <a href="#">Studio</a>
                     </li>
-                    <li class="main_menu_items">
+                    <li class="MainMenuItems">
                         <a href="#">Portfolio</a>
                     </li>
-                    <li class="main_menu_items">
+                    <li class="MainMenuItems">
                         <a href="#">Contacs</a>
                     </li>
                 </ul>
             </nav>
 
-            <div class="header_contacts">
+            <div class="HeaderContacts">
                 <ul>
-                    <li class="header_contacts_item">
-                        <a class="header_contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <li class="HeaderContactsItem">
+                        <a class="HeaderContact" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
-                    <li class="header_contacts_item">
-                        <a class="header_contact" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <li class="HaderContactsItem">
+                        <a class="HeaderContact" href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
             </div>
@@ -42,8 +42,21 @@
     </header>
 
     <main>
-        <section class="preview" id="preview"></section>
-        <section class="our_team" id="our_team"></section>
+        <section class="Preview">
+            <div class="PreviewBody">
+                <div class="PreviewBodyH1">
+                    <br>Effective Solutions </br>
+                        for Your Business</h1>
+                </div>
+                <div class="PreviewBodyButton">
+                    <a href="#">Order Service</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="Advantages"></section>
+
+        <section class="OurTeam"></section>
     </main>
 
     <footer></footer>
