--- a/index.html
+++ b/index.html
@@ -44,17 +44,23 @@
     <main>
         <section class="Preview">
             <div class="PreviewBody">
-                <div class="PreviewBodyH1">
+                <div class="PreviewH1">
                     <br>Effective Solutions </br>
                         for Your Business</h1>
                 </div>
-                <div class="PreviewBodyButton">
+                <div class="PreviewButton">
                     <a href="#">Order Service</a>
                 </div>
             </div>
         </section>
 
-        <section class="Advantages"></section>
+        <section class="Advantages">
+            <div class="AdvantagesMain">
+                <div class="AdvantagesBlock">
+
+                </div>
+            </div>
+        </section>
 
         <section class="OurTeam"></section>
     </main>
