--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
         <div class="HeadLine">
             <div class="Logo">
-                <span class="logoFirstWord">WEB</span>
-                <span class="logoSecondWord">STUDIO</span>
+                <span class="MainLogoFirstWord">WEB</span>
+                <span class="MainLogoSecondWord">STUDIO</span>
             </div>
 
             <nav class="MainMenu">
@@ -30,10 +30,10 @@
 
             <div class="HeaderContacts">
                 <ul>
-                    <li class="HeaderContactsItem">
+                    <li>
                         <a class="HeaderContact" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
-                    <li class="HaderContactsItem">
+                    <li>
                         <a class="HeaderContact" href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
@@ -57,14 +57,111 @@
         <section class="Advantages">
             <div class="AdvantagesMain">
                 <div class="AdvantagesBlock">
+                    <div class="AdvantagesH3">
+                        <h3>Strategy</h3>
+                    </div>
+                    <div class="AdvantagesConteht">
+                        <p>Our goal is to identify the business
+                            problem to walk away with the perfect and creative solution.</p>
+                    </div>
+                </div>
 
+                <div class="AdvantagesBlock">
+                    <div class="AdvantagesH3">
+                        <h3>Punctuality</h3>
+                    </div>
+                    <div class="AdvantagesConteht">
+                        <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                    </div>
+                </div>
+
+                <div class="AdvantagesBlock">
+                    <div class="AdvantagesH3">
+                        <h3>Diligence</h3>
+                    </div>
+                    <div class="AdvantagesConteht">
+                        <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                    </div>
+                </div>
+
+                <div class="AdvantagesBlock">
+                    <div class="AdvantagesTitle">
+                        <h3>Technologies</h3>
+                    </div>
+                    <div class="AdvantagesConteht">
+                        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <section class="OurTeam"></section>
+        <section class="OurTeam">
+            <div class="OurTeamMain">
+                <div class="OurTeamTitle">
+                    <h2>Our Team</h2>
+                </div>
+                <div class="OurTeamContainer">
+                    <div class="OurTeamContainerImage">
+                        <img src="/images/Mark_Guerrero.png" alt="Mark Guerrero photo" />
+                    </div>
+                    <div class="OurTeamContainerTitle">
+                        <h2>Mark Guerrero</h2>
+                    </div>
+                    <div class="OurTeamContainerPosition">
+                        <p>Product Designer</p>
+                    </div>
+                </div>
+
+                <div class="OurTeamContainer">
+                    <div class="OurTeamContainerImage">
+                        <img src="/images/Tom_Ford.png" alt="Tom Ford photo" />
+                    </div>
+                    <div class="OurTeamContainerTitle">
+                        <h2>Tom Ford</h2>
+                    </div>
+                    <div class="OurTeamContainerPosition">
+                        <p>Frontend Developerr</p>
+                    </div>
+                </div>
+
+                <div class="OurTeamContainer">
+                    <div class="OurTeamContainerImage">
+                        <img src="/images/Camila_Garcia.png" alt="Camila Garcia photo" />
+                    </div>
+                    <div class="OurTeamContainerTitle">
+                        <h2>Camila Garcia</h2>
+                    </div>
+                    <div class="OurTeamContainerPosition">
+                        <p>Marketing</p>
+                    </div>
+                </div>
+
+                <div class="OurTeamContainer">
+                    <div class="OurTeamContainerImage">
+                        <img src="/images/Daniel_Wilson.png" alt="Daniel Wilson photo" />
+                    </div>
+                    <div class="OurTeamContainerTitle">
+                        <h2>Daniel Wilson</h2>
+                    </div>
+                    <div class="OurTeamContainerPosition">
+                        <p>UI Designer</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <div class="FooterMain">
+            <div class="FooterLogo">
+                <span class="FooterLogoFirstWord">WEB</span>
+                <span class="FooterLogoSecondWord">STUDIO</span>
+            </div>
+            
+            <div class="FooterAdvertising">
+                <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
