--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section class="Preview">
             <div class="PreviewBody">
                 <div class="PreviewH1">
-                    <br>Effective Solutions </br>
+                   <h1>Effective Solutions <br />
                         for Your Business</h1>
                 </div>
                 <div class="PreviewButton">
@@ -157,7 +157,7 @@
                 <span class="FooterLogoFirstWord">WEB</span>
                 <span class="FooterLogoSecondWord">STUDIO</span>
             </div>
-            
+
             <div class="FooterAdvertising">
                 <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
             </div>
