--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 <body>
     <header>
         <div class="HeadLine">
-            <div class="Logo">
-                <span class="MainLogoFirstWord">WEB</span>
-                <span class="MainLogoSecondWord">STUDIO</span>
-            </div>
-
             <nav class="MainMenu">
+                <div class="Logo">
+                    <span class="MainLogoFirstWord">WEB</span>
+                    <span class="MainLogoSecondWord">STUDIO</span>
+                </div>
                 <ul class="MainMenuList">
                     <li class="MainMenuItems">
                         <a href="#">Studio</a>
@@ -28,83 +27,65 @@
                 </ul>
             </nav>
 
-            <div class="HeaderContacts">
+            <address class="HeaderContacts">
                 <ul>
                     <li>
-                        <a class="HeaderContact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li>
-                        <a class="HeaderContact" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
-            </div>
+            </address>
         </div>
     </header>
 
     <main>
         <section class="Preview">
-            <div class="PreviewBody">
-                <div class="PreviewH1">
-                   <h1>Effective Solutions <br />
+                   <h1 class="PreviewH1">Effective Solutions
                         for Your Business</h1>
-                </div>
-                <div class="PreviewButton">
-                    <a href="#">Order Service</a>
-                </div>
-            </div>
+                <button class="PreviewButton" type="button">Order Service</button>
         </section>
 
         <section class="Advantages">
-            <div class="AdvantagesMain">
+            <h2 class="AdvantagesH2"></h2>
                 <div class="AdvantagesBlock">
-                    <div class="AdvantagesH3">
+                    <div class="AdvantagesContent">
                         <h3>Strategy</h3>
-                    </div>
-                    <div class="AdvantagesConteht">
                         <p>Our goal is to identify the business
                             problem to walk away with the perfect and creative solution.</p>
                     </div>
                 </div>
 
                 <div class="AdvantagesBlock">
-                    <div class="AdvantagesH3">
+                    <div class="AdvantagesContent">
                         <h3>Punctuality</h3>
-                    </div>
-                    <div class="AdvantagesConteht">
                         <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                     </div>
                 </div>
 
                 <div class="AdvantagesBlock">
-                    <div class="AdvantagesH3">
+                    <div class="AdvantagesContent">
                         <h3>Diligence</h3>
-                    </div>
-                    <div class="AdvantagesConteht">
                         <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                     </div>
                 </div>
 
                 <div class="AdvantagesBlock">
-                    <div class="AdvantagesTitle">
+                    <div class="AdvantagesContent">
                         <h3>Technologies</h3>
-                    </div>
-                    <div class="AdvantagesConteht">
                         <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                     </div>
                 </div>
-            </div>
         </section>
 
         <section class="OurTeam">
-            <div class="OurTeamMain">
-                <div class="OurTeamTitle">
-                    <h2>Our Team</h2>
-                </div>
+                <h2>Our Team</h2>
                 <div class="OurTeamContainer">
                     <div class="OurTeamContainerImage">
                         <img src="/images/Mark_Guerrero.png" alt="Mark Guerrero photo" />
                     </div>
-                    <div class="OurTeamContainerTitle">
+                    <div class="OurTeamContainerContent">
                         <h2>Mark Guerrero</h2>
                     </div>
                     <div class="OurTeamContainerPosition">
@@ -116,10 +97,8 @@
                     <div class="OurTeamContainerImage">
                         <img src="/images/Tom_Ford.png" alt="Tom Ford photo" />
                     </div>
-                    <div class="OurTeamContainerTitle">
+                    <div class="OurTeamContainerContent">
                         <h2>Tom Ford</h2>
-                    </div>
-                    <div class="OurTeamContainerPosition">
                         <p>Frontend Developerr</p>
                     </div>
                 </div>
@@ -128,10 +107,8 @@
                     <div class="OurTeamContainerImage">
                         <img src="/images/Camila_Garcia.png" alt="Camila Garcia photo" />
                     </div>
-                    <div class="OurTeamContainerTitle">
+                    <div class="OurTeamContainerContent">
                         <h2>Camila Garcia</h2>
-                    </div>
-                    <div class="OurTeamContainerPosition">
                         <p>Marketing</p>
                     </div>
                 </div>
@@ -140,28 +117,23 @@
                     <div class="OurTeamContainerImage">
                         <img src="/images/Daniel_Wilson.png" alt="Daniel Wilson photo" />
                     </div>
-                    <div class="OurTeamContainerTitle">
+                    <div class="OurTeamContainerContent">
                         <h2>Daniel Wilson</h2>
-                    </div>
-                    <div class="OurTeamContainerPosition">
                         <p>UI Designer</p>
                     </div>
                 </div>
-            </div>
         </section>
     </main>
 
     <footer>
-        <div class="FooterMain">
             <div class="FooterLogo">
                 <span class="FooterLogoFirstWord">WEB</span>
                 <span class="FooterLogoSecondWord">STUDIO</span>
             </div>
-
+            
             <div class="FooterAdvertising">
                 <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
             </div>
-        </div>
     </footer>
 </body>
 </html>
