Fixes after the test
The first correction after the test, taking into account the work of the self-test for accepting the task

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <header>
             <nav class="MainMenu">
                 <div class="Logo">
-                    <span class="MainLogoFirstWord">WEB</span>
-                    <span class="MainLogoSecondWord">STUDIO</span>
+                    <a href="">WEBSTUDIO</a>
                 </div>
                 <ul class="MainMenuList">
                     <li class="MainMenuItems">
@@ -40,91 +39,121 @@
 
     <main>
         <section class="Preview">
-                   <h1 class="PreviewH1">Effective Solutions
-                        for Your Business</h1>
+                   <h1 class="PreviewH1">Effective Solutionsfor Your Business</h1>
                 <button class="PreviewButton" type="button">Order Service</button>
         </section>
 
         <section class="Advantages">
-            <h2 class="AdvantagesH2"></h2>
+            <h2></h2>
                 <div class="AdvantagesBlock">
-                    <div class="AdvantagesContent">
-                        <h3>Strategy</h3>
-                        <p>Our goal is to identify the business
-                            problem to walk away with the perfect and creative solution.</p>
-                    </div>
+                    <ul>
+                        <li>
+                            <h3>Strategy</h3>
+                        </li>
+                        <li>
+                            <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                        </li>
+                    </ul>
                 </div>
 
                 <div class="AdvantagesBlock">
-                    <div class="AdvantagesContent">
-                        <h3>Punctuality</h3>
-                        <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-                    </div>
+                    <ul>
+                        <li>
+                            <h3>Punctuality</h3>
+                        </li>
+                        <li>
+                            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                         </li>
+                    </ul>
                 </div>
 
                 <div class="AdvantagesBlock">
-                    <div class="AdvantagesContent">
-                        <h3>Diligence</h3>
-                        <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-                    </div>
+                    <ul>
+                        <li>
+                            <h3>Diligence</h3>
+                        </li>
+                        <li>
+                            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                        </li>
+                    </ul>
                 </div>
 
                 <div class="AdvantagesBlock">
-                    <div class="AdvantagesContent">
-                        <h3>Technologies</h3>
-                        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-                    </div>
+                    <ul>
+                        <li>
+                            <h3>Technologies</h3>
+                        </li>
+                        <li>
+                            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                        </li>
+                    </ul>
                 </div>
         </section>
 
         <section class="OurTeam">
                 <h2>Our Team</h2>
                 <div class="OurTeamContainer">
-                    <div class="OurTeamContainerImage">
-                        <img src="/images/Mark_Guerrero.png" alt="Mark Guerrero photo" />
-                    </div>
-                    <div class="OurTeamContainerContent">
-                        <h2>Mark Guerrero</h2>
-                        <p>Product Designer</p>
-                    </div>
+                    <ul>
+                        <li>
+                            <img src="/images/Mark_Guerrero.png" alt="Mark Guerrero photo" />
+                        </li>
+                        <li>
+                            <h2>Mark Guerrero</h2>
+                        </li>
+                        <li>
+                            <p>Product Designer</p>
+                        </li>
+                    </ul>
                 </div>
 
                 <div class="OurTeamContainer">
-                    <div class="OurTeamContainerImage">
-                        <img src="/images/Tom_Ford.png" alt="Tom Ford photo" />
-                    </div>
-                    <div class="OurTeamContainerContent">
-                        <h2>Tom Ford</h2>
-                        <p>Frontend Developerr</p>
-                    </div>
+                    <ul>
+                        <li>
+                            <img src="/images/Tom_Ford.png" alt="Tom Ford photo" />
+                        </li>
+                        <li>
+                            <h2>Tom Ford</h2>
+                        </li>
+                        <li>
+                            <p>Frontend Developerr</p>
+                        </li>
+                    </ul>
                 </div>
 
                 <div class="OurTeamContainer">
-                    <div class="OurTeamContainerImage">
-                        <img src="/images/Camila_Garcia.png" alt="Camila Garcia photo" />
-                    </div>
-                    <div class="OurTeamContainerContent">
-                        <h2>Camila Garcia</h2>
-                        <p>Marketing</p>
-                    </div>
+                    <ul>
+                        <li>
+                            <img src="/images/Camila_Garcia.png" alt="Camila Garcia photo" />
+                        </li>
+                        <li>
+                            <h2>Camila Garcia</h2>
+                        </li>
+                        <li>
+                            <p>Marketing</p>
+                        </li>
+                    </ul>
                 </div>
 
                 <div class="OurTeamContainer">
-                    <div class="OurTeamContainerImage">
-                        <img src="/images/Daniel_Wilson.png" alt="Daniel Wilson photo" />
-                    </div>
-                    <div class="OurTeamContainerContent">
-                        <h2>Daniel Wilson</h2>
-                        <p>UI Designer</p>
-                    </div>
+                    <ul>
+                        <li>
+                            <img src="/images/Daniel_Wilson.png" alt="Daniel Wilson photo" />
+                        </li>
+                        <li>
+                            <h2>Daniel Wilson</h2>
+                        </li>
+                        <li>
+                            <p>UI Designer</p>
+                        </li>
+                    </ul>
                 </div>
+
         </section>
     </main>
 
     <footer>
             <div class="FooterLogo">
-                <span class="FooterLogoFirstWord">WEB</span>
-                <span class="FooterLogoSecondWord">STUDIO</span>
+                <a href="">WEBSTUDIO</a>
             </div>
 
             <div class="FooterAdvertising">
