--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </ul>
             </nav>
 
-            <address class="HeaderContacts">
+            <address class="Contacts">
                 <ul>
                     <li>
                         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -39,8 +39,8 @@
 
     <main>
         <section class="Preview">
-                   <h1 class="PreviewH1">Effective Solutionsfor Your Business</h1>
-                <button class="PreviewButton" type="button">Order Service</button>
+            <h1 class="PreviewH1">Effective Solutionsfor Your Business</h1>
+            <button class="PreviewButton" type="button">Order Service</button>
         </section>
 
         <section class="Advantages">
@@ -49,9 +49,9 @@
                     <ul>
                         <li>
                             <h3>Strategy</h3>
+                            <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                         </li>
                         <li>
-                            <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                         </li>
                     </ul>
                 </div>
