--- a/index.html
+++ b/index.html
@@ -8,24 +8,22 @@
 
 <body>
     <header>
-            <nav class="MainMenu">
-                <div class="Logo">
-                    <a href="">WEBSTUDIO</a>
-                </div>
-                <ul class="MainMenuList">
-                    <li class="MainMenuItems">
+            <nav>
+                <a href="">WEBSTUDIO</a>
+                <ul>
+                    <li>
                         <a href="#">Studio</a>
                     </li>
-                    <li class="MainMenuItems">
+                    <li>
                         <a href="#">Portfolio</a>
                     </li>
-                    <li class="MainMenuItems">
+                    <li>
                         <a href="#">Contacs</a>
                     </li>
                 </ul>
             </nav>
 
-            <address class="Contacts">
+            <address>
                 <ul>
                     <li>
                         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -38,127 +36,67 @@
     </header>
 
     <main>
-        <section class="Preview">
-            <h1 class="PreviewH1">Effective Solutionsfor Your Business</h1>
-            <button class="PreviewButton" type="button">Order Service</button>
+        <section>
+            <h1>Effective Solutionsfor Your Business</h1>
+            <button type="button">Order Service</button>
         </section>
 
-        <section class="Advantages">
+        <section>
             <h2></h2>
-                <div class="AdvantagesBlock">
                     <ul>
                         <li>
                             <h3>Strategy</h3>
                             <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                         </li>
-                        <li>
-                        </li>
-                    </ul>
-                </div>
 
-                <div class="AdvantagesBlock">
-                    <ul>
                         <li>
                             <h3>Punctuality</h3>
-                        </li>
-                        <li>
                             <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-                         </li>
-                    </ul>
-                </div>
+                        </li>
 
-                <div class="AdvantagesBlock">
-                    <ul>
                         <li>
                             <h3>Diligence</h3>
-                        </li>
-                        <li>
                             <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                         </li>
-                    </ul>
-                </div>
-
-                <div class="AdvantagesBlock">
-                    <ul>
                         <li>
                             <h3>Technologies</h3>
-                        </li>
-                        <li>
                             <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                         </li>
                     </ul>
-                </div>
         </section>
 
-        <section class="OurTeam">
+        <section>
                 <h2>Our Team</h2>
-                <div class="OurTeamContainer">
                     <ul>
                         <li>
                             <img src="/images/Mark_Guerrero.png" alt="Mark Guerrero photo" />
-                        </li>
-                        <li>
                             <h2>Mark Guerrero</h2>
-                        </li>
-                        <li>
                             <p>Product Designer</p>
                         </li>
-                    </ul>
-                </div>
-
-                <div class="OurTeamContainer">
-                    <ul>
                         <li>
                             <img src="/images/Tom_Ford.png" alt="Tom Ford photo" />
-                        </li>
-                        <li>
                             <h2>Tom Ford</h2>
-                        </li>
-                        <li>
                             <p>Frontend Developerr</p>
                         </li>
-                    </ul>
-                </div>
 
-                <div class="OurTeamContainer">
-                    <ul>
                         <li>
                             <img src="/images/Camila_Garcia.png" alt="Camila Garcia photo" />
-                        </li>
-                        <li>
                             <h2>Camila Garcia</h2>
-                        </li>
-                        <li>
                             <p>Marketing</p>
                         </li>
-                    </ul>
-                </div>
 
-                <div class="OurTeamContainer">
-                    <ul>
                         <li>
                             <img src="/images/Daniel_Wilson.png" alt="Daniel Wilson photo" />
-                        </li>
-                        <li>
                             <h2>Daniel Wilson</h2>
-                        </li>
-                        <li>
                             <p>UI Designer</p>
                         </li>
                     </ul>
-                </div>
-
         </section>
     </main>
 
     <footer>
-            <div class="FooterLogo">
                 <a href="">WEBSTUDIO</a>
-            </div>
-
-            <div class="FooterAdvertising">
                 <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-            </div>
     </footer>
 </body>
 </html>
