--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <a href="/index.html">WEBSTUDIO</a>
+            <a href="./index.html">WEBSTUDIO</a>
             <ul>
                 <li>
                     <a href="#">Studio</a>
@@ -18,7 +18,7 @@
                     <a href="#">Portfolio</a>
                 </li>
                 <li>
-                    <a href="#">Contacs</a>
+                    <a href="#">Contacts</a>
                 </li>
             </ul>
         </nav>
@@ -26,7 +26,7 @@
         <address>
             <ul>
                 <li>
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a href=”mailto:info@devstudio.com”>info@devstudio.com</a>
                 </li>
                 <li>
                     <a href="tel:+110001111111">+11 (000) 111-11-11</a>
@@ -42,7 +42,7 @@
         </section>
 
         <section>
-            <h2></h2>
+            <h2> </h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
