--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html">WEBSTUDIO</a>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li>
                     <a href="#">Studio</a>
@@ -37,12 +37,12 @@
 
     <main>
         <section>
-            <h1>Effective Solutionsfor Your Business</h1>
+            <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
         </section>
 
         <section>
-            <h2> </h2>
+            <h2>somsing</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
@@ -69,25 +69,26 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="/images/Mark_Guerrero.png" alt="Mark Guerrero photo" />
-                    <h2>Mark Guerrero</h2>
+                    <img src="/images/Mark_Guerrero.jpg" alt="Mark Guerrero photo" width="264"/>
+                    <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="/images/Tom_Ford.png" alt="Tom Ford photo" />
-                    <h2>Tom Ford</h2>
-                    <p>Frontend Developerr</p>
+                    <img src="/images/Tom_Ford.jpg" alt="Tom Ford photo"  width="264"/>
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
                 </li>
 
                 <li>
-                    <img src="/images/Camila_Garcia.png" alt="Camila Garcia photo" />
-                    <h2>Camila Garcia</h2>
+                    <img src="/images/Camila_Garcia.jpg" alt="Camila Garcia photo" width="264"/>
+                    <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
 
                 <li>
-                    <img src="/images/Daniel_Wilson.png" alt="Daniel Wilson photo" />
-                    <h2>Daniel Wilson</h2>
+
+                    <img src="/images/Daniel_Wilson.jpg" alt="Daniel Wilson photo" width="264"/>
+                    <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
@@ -95,7 +96,7 @@
     </main>
 
     <footer>
-        <a href="">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
